--- a/404.html
+++ b/404.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; URL='https://classmeet.online/'">
+<meta http-equiv="refresh" content="0; URL='https://cvm.rest/'">
 <title>‎ </title>
